refactor(queue): use of Virtual Threads in HttpClient