@@ -5,10 +5,10 @@ import java.time.Duration;
 import java.util.concurrent.Executors;
 
 public class CrawlerQueueHttpClient {
-    final private static HttpClient CLIENT = HttpClient.newBuilder()
+    private static final HttpClient CLIENT = HttpClient.newBuilder()
             .version(HttpClient.Version.HTTP_2)
             .connectTimeout(Duration.ofSeconds(60))
-            .executor(Executors.newFixedThreadPool(16))
+            .executor(Executors.newVirtualThreadPerTaskExecutor())
             .build();
 
     public static HttpClient getClient() {
